2007-05-23  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/fit.R (power.law.fit) : error/stop bug corrected

2007-05-22  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/community.R (edge.betweenness.community) 	
	(walktrap.community, spinglass.community)
	* interfaces/R/igraph/R/iterators.R (write.graph.dimacs)
	* interfaces/R/igraph/R/iterators.R (print.igraph.vs)
	* interfaces/R/igraph/R/minimum.spanning.tree (minimum.spanning.tree)
	* interfaces/R/igraph/R/revolver.R (revolver.d.d, revolver.p.p)
	* interfaces/R/igraph/structural.properties.R (constraint) :
	bugs corrected, i tend to write V(g) instead of the correct V(graph)...

2007-05-17  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/interface.R (get.edges) : return a matrix
	* interfaces/R/igraph/R/iterators.R (print.igraph.es) : updated

	* interfaces/R/igraph/R/iterators.R (print.igraph.es, print.igraph.vs) :
	pretty printing

	* interfaces/R/igraph/R/interface.R (get.edges) : added
	* interfaces/R/src/rinterface.c (R_igraph_get_edges) : added

2007-05-16  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/foreign.R (write.graph) : convert format name to
	lowercase

	* interfaces/R/igraph/R/foreign.R (write.graph, write.graph.gml) :
	GML format added
	* interfaces/R/src/rinterface.c (R_igraph_write_graph_gml) : added

2007-05-12  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/foreign.R (read.graph, read.graph.gml) :
	GML format added
	* interfaces/R/src/rinterface.c (R_igraph_read_graph_gml) : added

2007-05-11  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/revolver.R (revolver.p.p) : added
	* interfaces/R/src/rinterface.c (R_igraph_revolver_p_p) : added

2007-05-09  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/revolver.R (evolver.d) : added
	* interfaces/R/src/rinterface.c (R_igraph_evolver_d) : added

	* interfaces/R/igraph/R/revolver.R (revolver.d.d) : added